force-app/main/default/objects/JWT_Settings__mdt/JWT_Settings__mdt.object-meta.xml
<CustomObject>
    <label>JWT_Settings</label>
    <pluralLabel>JWT_Settings</pluralLabel>
</CustomObject>