force-app/main/default/objects/JWT_Settings__mdt/fields/Aud__c.field-meta.xml
<CustomField>
    <fullName>Aud__c</fullName>
    <label>Aud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>