force-app/main/default/objects/JWT_Settings__mdt/fields/Exp__c.field-meta.xml
<CustomField>
    <fullName>Exp__c</fullName>
    <label>Exp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>