force-app/main/default/objects/JWT_Settings__mdt/fields/HeaderClient__c.field-meta.xml
<CustomField>
    <fullName>HeaderClient__c</fullName>
    <label>HeaderClient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>