force-app/main/default/objects/JWT_Settings__mdt/fields/Iat__c.field-meta.xml
<CustomField>
    <fullName>Iat__c</fullName>
    <label>Iat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>