force-app/main/default/objects/JWT_Settings__mdt/fields/Iss__c.field-meta.xml
<CustomField>
    <fullName>Iss__c</fullName>
    <label>Iss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>