force-app/main/default/objects/JWT_Settings__mdt/fields/Kid__c.field-meta.xml
<CustomField>
    <fullName>Kid__c</fullName>
    <label>Kid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>