force-app/main/default/objects/JWT_Settings__mdt/fields/PublicKey__c.field-meta.xml
<CustomField>
    <fullName>PublicKey__c</fullName>
    <label>PublicKey</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>