force-app/main/default/objects/JWT_Settings__mdt/fields/Sub__c.field-meta.xml
<CustomField>
    <fullName>Sub__c</fullName>
    <label>Sub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>