force-app/main/default/objects/JWT_Settings__mdt/fields/TokenEndpoint__c.field-meta.xml
<CustomField>
    <fullName>TokenEndpoint__c</fullName>
    <label>TokenEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>